--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!--header-->
     <header>
-        <a href="#" class="logo"><span>M</span>azian</a>
+        <a href="#" class="logo"><span>P</span>ortfolio</a>
         <ul class="navbar">
             <li><a href="#" class="active">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
