--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
 <div class="bx bx-menu" id="menu-icon"></div>
             </div>
     </header>
+    <!--home-->
+    <section class="home">
+        <div class="home-text">
+            <span>WEB DEVELOPER</span>
+            <h1>PRAGYA SINGH</h1>
+            <p>Hello I am Pragya Singh</p>
+            <div class="main-btn">
+                <a href="#" class="btn">HELLO</a>
+                <a href="#" class="btn">Let's Connect</a>
+            </div>
+        </div>
+
+        <div class="home-img">
+            <img src="../../../../img.jpg">
+        </div>
+    </section>
     <!--custom js file-->
     <script src="script.js"></script>
 </body>
