--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Hello I am Pragya Singh</p>
             <div class="main-btn">
                 <a href="#" class="btn">HELLO</a>
-                <a href="#" class="btn">Let's Connect</a>
+                <a href="#" class="btn two">Let's Connect</a>
             </div>
         </div>
 
@@ -44,6 +44,15 @@
             <img src="../../../../img.jpg">
         </div>
     </section>
+    <div class="share">
+        <p>Check Out MY:</p>
+        <div class="social">
+            <a href="#"><i class='bx bxl-whatsapp'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
+    </div>
     <!--custom js file-->
     <script src="script.js"></script>
 </body>
