--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
     <div class="share">
         <p>Check Out MY:</p>
         <div class="social">
-            <a href="#"><i class='bx bxl-whatsapp'></i></a>
-            <a href="#"><i class='bx bxl-instagram'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.instagram.com/pragyasingh1340/profilecard/?igsh=YTNpem15dnMwd2p5"><i class='bx bxl-instagram'></i></a>
+            <a href="https://github.com/Pragya79645"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/pragya-singh-71884b30b"><i class='bx bxl-linkedin'></i></a>
         </div>
     </div>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!--custom js file-->
     <script src="script.js"></script>
 </body>
