--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         </div>
     </header>
     <!--home-->
+
     <section class="home">
         <div class="home-text">
            
-            <h1>PRAGYA SINGH</h1>
+            <h1 style="padding: 0px;">PRAGYA SINGH</h1>
             <p>Hello I am Pragya Singh &#128075</p>
             <div class="main-btn">
                 <a href="#" class="btn">ABOUT</a>
